src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

/*App Component*/

.app {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: .5em;
  width: 100%;
}

.private {
  width: 100%;
}

.container {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding-left: 1em;
  padding-right: 1em;
}

/*ListPolls Component*/

.poll-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
  border: 1px solid #ECECEC;
}

@media screen and (min-width: 600px) {
  .poll-list {
    width: 75%;
  }
}

@media screen and (min-width: 800px) {
  .poll-list {
    width: 65%;
  }
}

@media screen and (min-width: 1000px) {
  .poll-list {
    width: 541px;
    margin: 0 auto;
  }
}

.filter-polls-selected {
  width: 50%;
  height: 3em;
  background: #F1EFF0;
  color: green;
  font-weight: bold;
  cursor: pointer;
}

.filter-polls-not-selected {
  width: 50%;
  height: 3em;
  background: transparent;
  color: #808080;
  font-weight: bold;
  cursor: pointer;
}

.polls {
  min-width: 100%;
  list-style-type: none;
  padding-left: 0;
}

/*Poll Component*/

.poll {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  margin-bottom: 1em;
  border: 1px solid #ECECEC;
}

.author {
  width: 100%;
  font-size: 80%;
  margin: 0;
  padding: 1em 0 1em .5em;
  border-bottom: 1px solid #DDDDDD;
  background-color: #EEEEEE;
}

.image {
  width: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: .5em;
}

.avatar {
  height: 5em;
  max-width: 100%;
  border-radius: 50%;
}

.question-detail {
  display: flex;
  flex-wrap: wrap;
  width: 70%;
  margin: .5em 0;
  border-left: 1px solid gray;
  padding-left: 10px;
}

.question {
  width: 100%;
  font-size: 80%;
  font-weight: bold;
}

.options {
  width: 100%;
  font-size: 65%;
  margin-bottom: 1em;
}

.view-poll {
  width: 100%;
  height: 25px;
  margin-top: .5em;
  background: #43CDA4;
  color: #fff;
  font-weight: bold;
  border-radius: 3.5px;
  cursor: pointer;
}

.view-poll:hover {
  background: #34987C;
}

/*AnswerPoll Component*/

.answer-poll, .show-results {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  border: 1px solid #ECECEC;
}

@media screen and (min-width: 600px) {
  .answer-poll, .show-results {
    width: 75%;
  }
}

@media screen and (min-width: 800px) {
  .answer-poll, .show-results {
    width: 65%;
  }
}

@media screen and (min-width: 1000px) {
  .answer-poll, .show-results {
    width: 541px;
    margin: 0 auto;
  }
}

@media screen and (max-width: 449px) {
  .detail-image {
    display: flex;
    justify-content: center;
    width: 100%;
    padding-top: 1em;
  }

  .detail-question-detail {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    width: 100%;
    margin: .5em 0;
    padding-left: 1.5em;
    padding-right: 1.5em;
  }
}

@media screen and (min-width: 450px) {
  .detail-image {
    display: flex;
    justify-content: center;
    width: 20%;
    padding-right: 1em;
  }

  .detail-question-detail {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    width: 70%;
    margin: .5em 0;
    border-left: 1px solid gray;
    padding-left: 1.5em;
  }
}

.detail-avatar {
  height: 6em;
  border-radius: 50%;
}

.question-form {
  width: 100%;
}

.radios {
  width: 100%;
  margin-bottom: 1em;
}

.radio {
  margin-right: 1em
}

.submit-poll {
  width: 100%;
  height: 25px;
  background: #34987C;
  color: #fff;
  font-weight: bold;
  border-radius: 3.5px;
  cursor: pointer;
}

.header {
  width: 100%;
}

.option {
  display: flex;
  flex-wrap: wrap;
  position: relative;
  z-index: 1;
  width: 100%;
  border: 1px solid #CDE0DD;
  padding: 0 1em 1em 1em;
  margin-right: 1em;
  margin-bottom: 1em;
}

.vote {
  width: 50px;
  height: 50px;
  display: flex;
  justify-content: center;
  position: absolute;
  top: -15px;
  right: -20px;
  z-index: 1000;
  margin-left: 1em;
  align-items: center;
  background: #DDBA3F;
  color: #fff;
  border-radius: 50%;
}

.voteText {
  text-align: center;
}

.option-text {
  position: relative;
  z-index: 1;
  font-size: 95%;
}

.percentage {
  width: 100%;
  margin-bottom: 1em;
}

.votes {
  font-weight: bold;
}

/*CreatePoll component*/

.create-poll {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-content: center;
  width: 100%;
  border: 1px solid #ECECEC;
}

@media screen and (min-width: 600px) {
  .create-poll {
    width: 75%;
  }
}

@media screen and (min-width: 800px) {
  .create-poll {
    width: 65%;
  }
}

@media screen and (min-width: 1000px) {
  .create-poll {
    width: 541px;
    margin: 0 auto;
  }
}

.create {
  margin: 0;
  width: 100%;
  line-height: 2em;
  text-align: center;
  background: #EEEEEE;
}

.divider {
  width: 100%;
  border: 1px solid #ECECEC;
}

.complete {
  width: 100%;
  padding-left: .5em;
  font-size: 85%;
  font-weight: bold;
}

.complete:first-of-type {
  margin-bottom: .5em;
}

.input {
  height: 25px;
  padding-left: .5em;
  border-radius: 3.5px;
  border: 1px solid #EEEEEE;
}

.input:first-of-type {
  margin-bottom: .5em;
}

.input:last-of-type {
  margin-top: .5em;
}

.enter-poll {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding-bottom: .5em;
}

.input, .space {
  width: 95%;
}

.space {
  text-align: center;
}

.submit-new-poll {
  width: 97%;
  height: 25px;
  margin-top: .5em;
  background: #43CDA4;
  color: #fff;
  font-weight: bold;
  border-radius: 3.5px;
  cursor: pointer;
}

.submit-new-poll:hover {
  background: #34987C;
}

/*ListUsers component*/

.leader-board {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
}

.user-list {
  width: 100%;
  list-style-type: none;
  padding-left: 0;
}

@media screen and (min-width: 600px) {
  .user-list {
    width: 75%;
  }
}

@media screen and (min-width: 800px) {
  .user-list {
    width: 65%;
  }
}

@media screen and (min-width: 1000px) {
  .user-list {
    width: 541px;
    margin: 0 auto;
  }
}

.user-list-item {
  margin-bottom: 1em;
}

/**styling for mobile screens with widths under 400px**/

@media screen and (max-width: 400px) {
  .user-list-item {
    width: 100%;
    margin-bottom: 1em;
  }

  .user-detail-image {
    width: 100%;
    display: flex;
    justify-content: center;
    padding: 1em 1em 1em 0;
  }

  .user-question-detail {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    width: 100%;
    margin: .5em 0;
    padding-left: .65em;
    padding-right: 1em;
  }

  .score {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-left: .5em;
    margin-right: .5em;
    width: 100%;
    border-top: 1px solid #DDDDDD;
  }

  .score-header {
    width: 90%;
    font-size: 95%;
    margin: 0;
    padding: 1em 0;
  }
}

/*User component*/

.user {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: center;
  border: 1px solid #DDDDDD;
}

@media screen and (min-width: 401px) {
  .user-detail-image {
    width: 20%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .user-question-detail {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    width: 45%;
    margin: .5em 0;
    border-left: 1px solid #DDDDDD;
    border-right: 1px solid #DDDDDD;
    padding-left: 1em;
    padding-right: 1em;
  }

  .score {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-left: 1em;
    margin-right: .5em;
    width: 20%;
    border: 1px solid #DDDDDD;
  }

  .score-header {
    width: 100%;
    text-align: center;
    font-size: 80%;
    margin: 0;
    padding: 1em 0;
    border-bottom: 1px solid #DDDDDD;
  }
}

.user-avatar {
  height: 5em;
  border-radius: 50%;
}

.user-name {
  width: 100%;
  margin: 0;
}

.answered-created {
  width: 100%;
}

.answered-created:first-of-type {
  margin-bottom: 0;
}

.right {
  float: right;
}

/*Login component*/

.login-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  border: 1px solid gray;
}

@media screen and (min-width: 600px) {
  .login-container {
    width: 75%;
  }
}

@media screen and (min-width: 800px) {
  .login-container {
    width: 65%;
  }
}

@media screen and (min-width: 1000px) {
  .login-container {
    width: 541px;
    margin: 0 auto;
  }
}

.welcome {
  margin-bottom: .5em;
  width: 100%;
  text-align: center;
}

.login-message {
  margin-top: 0;
  font-size: 90%;
  width: 100%;
  text-align: center;
}

.logo {
  display: flex;
  justify-content: center;
  max-width: 100%;
}

.login-form {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0 1em 1em 1em;
}

.dropdown {
  width: 100%;
  margin-bottom: 1em;
  background: transparent;
}

.login-button {
  width: 100%;
  background: #43CDA4;
  color: #fff;
  font-weight: bold;
  border-radius: 3.5px;
  cursor: pointer;
}

.login-button:hover {
  background: #34987C;
}

.dropdown, .login-button {
  height: 25px;
}

/*Nav component*/
.bars {
  align-self: center;
  color: #696969;
  cursor: pointer;
  margin-bottom: .5em;
}

.bars:hover {
  color: #34987C;
}

.navContainer {
  width: 100%;
}

.drawer {
  width: 250px;
  position: absolute;
  -webkit-transform: translate(-350px, 0);
  transform: translate(-350px, 0);
  z-index: 1000;
}

.open {
  -webkit-transform: translate(0, 0);
  transform: translate(0, 0);
  background-color: #34987C;
}

.nav-list {
  list-style-type: none;
  padding-left: 0;
  margin: 0 0 1em 0;
}

.nav-list-item {
  margin-top: 1em;
  margin-bottom: 1em;
  height: 100%;
}

@media screen and (min-width: 601px) {
  .bars {
    display: none;
  }

  .drawer {
    display: flex;
    position: relative;
    -webkit-transform: translate(0, 0);
    transform: translate(0, 0);
    width: 100%;
    height: 3em;
    border-bottom: 5px solid #43CDA4;
    margin-bottom: 1em;
    color: #696969;
    background-color: #fff;
  }

  .nav-list {
    display: flex;
    align-items: center;
    height: 100%;
    list-style-type: none;
    padding-left: 0;
    margin: 0 0 1em 0;
  }
}

.nav-link {
  display: flex;
  align-items: center;
  text-align: center;
  height: 100%;
  text-decoration: none;
  padding-left: .5em;
  padding-right: .5em;
  color: inherit;
}

.nav-link:hover {
  color: #fff;
  font-weight: bold;
}

.active {
  color: #fff;
  font-weight: bold;
}

@media screen and (min-width: 601px) {
  .nav-link:hover {
    font-weight: normal;
    color: #403d3d;
    background: #43CDA4;
  }

  .active {
    color: #000;
    font-weight: normal;
  }
}

.authed-logout {
  display: flex;
  margin-right: 0;
  margin-left: auto;
}

@media screen and (max-width: 600px) {
  .authed-logout {
    flex-wrap: wrap;
    margin-left: 0;
    justify-content: center;
    padding-bottom: 1em;
    border-top: 1px solid #696969;
  }

  .logout-button {
    background-color: #34987C;
    padding-left: .5em;
  }

  .logout-button:hover {
    color: #fff;
    font-weight: bold;
  }

  .authed-user {
    width: 100%;
    padding-left: .5em;
  }

  .logout {
    width: 100%;
  }
}

/*ShowAuthedUser component*/

.authed-user {
  display: flex;
  align-items: center;
}

.greeting {
  margin-right: .5em;
}

.authed-image {
  width: 30px;
  max-height: 100%;
  padding: .5em;
}

.authed-avatar {
  max-width: 100%;
  max-height: 100%;
  border-radius: 50%;
}

/*Logout component*/

.logout {
  display: flex;
  align-content: center;
}

.logout-button {
  border: none;
  font-size: 1em;
  cursor: pointer;
  color: inherit;
}

@media screen and (min-width: 601px) {
  .logout-button:hover {
    background-color: #43CDA4;
  }
}

